# ckan-mcp-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-image.yml
docs/: API_COOKBOOK.md  CHANGELOG_RESOURCE_DUMP.md  QUICK_REFERENCE.md  QUICK_START_ADMIN.md  README.md  RESOURCE_DOWNLOAD.md  SCENARIO_EXAMPLES.md  SETUP_CLAUDE_DESKTOP.md  TOOLS_BY_USE_CASE.md  TOOL_CAPABILITIES.md
examples/: README.md  example_resource_dump.py
src/: README.md  __init__.py  mcp_ckan_server.py
src/ckan_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: README.md  test_download_pacificdata.py  test_resource_download.py
